# MyChat

./: .gitignore  README.md  mychat.drawio
DataServer/: CMakeLists.txt
DataServer/include/: DataServer.h  md5.h  mysqlpool.h
DataServer/main/: DataServerMain.cpp
DataServer/src/: DataServer.cc  log.cc
LoginServer/: .clang-format  CMakeLists.txt
LoginServer/include/: DataClient.h  log.h  server.h
LoginServer/main/: LoginClient.cpp  LoginServer.cpp  RegisterClient.cpp
LoginServer/protos/: MC.Login.proto
LoginServer/src/: server.cc
MsgServer/: .clang-format  CMakeLists.txt
MsgServer/include/: DataClient.h  DataServer.h  server.h
MsgServer/main/: MsgServer.cpp
MsgServer/src/: DataServer.cc  mysqlpool.cc  server.cc
protos/Data/: MC.Data.proto
protos/Login/: MC.Heart.proto  MC.Login.proto  MC.Msg.proto
protos/Msg/: MC.Msg.proto
